<resources>
    <string name="app_name">forn</string>
    <string name="exit">Salir</string>
    <string name="registration">Registrarse</string>
    <string name="login">Login</string>
    <string name="entry">Acceder</string>
    <string name="forgotPass">Olvido de Contraseña</string>
    <string name="password">Contraseña</string>
    <string name="inicioSesion">Iniciar Sesión</string>
    <string name="user">Usuario</string>
    <string name="loginError">Usuario o contraseña incorrectos</string>
    <string name="description">Descripción:</string>
    <string name="price">Precio:</string>
    <string name="stock">Stock:</string>
    <string name="buy">Comprar</string>
    <string name="number">Unidades</string>
    <string name="main_activity">Menú Principal</string>
</resources>