<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProductDetailActivity">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivImage"/>

    <TextView
        android:id="@+id/tvDescriptionDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/description"
        android:textColor="@color/design_default_color_primary_variant"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toEndOf="@id/ivImage" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/design_default_color_primary_variant"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toEndOf="@id/tvDescriptionDesc" />

    <TextView
        android:id="@+id/tvStockDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/stock"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintStart_toEndOf="@id/ivImage" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintStart_toEndOf="@id/tvPriceDesc" />

    <TextView
        android:id="@+id/tvPriceDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/price"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice"
        app:layout_constraintStart_toEndOf="@id/ivImage" />

    <TextView
        android:id="@+id/tvStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice"
        app:layout_constraintStart_toEndOf="@id/tvStockDesc" />

    <TextView
        android:id="@+id/etNumberDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/number"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceDesc"
        app:layout_constraintStart_toEndOf="@id/ivImage"  />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceDesc"
        app:layout_constraintStart_toEndOf="@id/etNumberDesc"/>

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="buy"
        android:text="@string/buy"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/etNumber"
        app:layout_constraintStart_toEndOf="@id/etNumber" />

    <Button
        android:id="@+id/btnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="goMain"
        android:text="@string/main_activity"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/btnBuy"
        app:layout_constraintStart_toEndOf="@id/etNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>